# serializer version: 1
# name: test_setup[generic_10_key][event.led_infrared_via_test_ir_emitter_received_command-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'on',
        'off',
        'brightness_up',
        'brightness_down',
        'timer_2h',
        'timer_4h',
        'timer_6h',
        'timer_8h',
        'candle',
        'light',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.led_infrared_via_test_ir_emitter_received_command',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Received command',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Received command',
    'platform': 'led_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'received_command',
    'unique_id': '1234567890',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[generic_10_key][event.led_infrared_via_test_ir_emitter_received_command-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'on',
        'off',
        'brightness_up',
        'brightness_down',
        'timer_2h',
        'timer_4h',
        'timer_6h',
        'timer_8h',
        'candle',
        'light',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'LED Infrared via Test IR emitter Received command',
    }),
    'context': <ANY>,
    'entity_id': 'event.led_infrared_via_test_ir_emitter_received_command',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[generic_13_key][event.led_infrared_via_test_ir_emitter_received_command-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'on',
        'timer',
        'off',
        'mode_1',
        'mode_2',
        'mode_3',
        'mode_4',
        'mode_5',
        'mode_6',
        'mode_7',
        'mode_8',
        'brightness_up',
        'brightness_down',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.led_infrared_via_test_ir_emitter_received_command',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Received command',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Received command',
    'platform': 'led_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'received_command',
    'unique_id': '1234567890',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[generic_13_key][event.led_infrared_via_test_ir_emitter_received_command-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'on',
        'timer',
        'off',
        'mode_1',
        'mode_2',
        'mode_3',
        'mode_4',
        'mode_5',
        'mode_6',
        'mode_7',
        'mode_8',
        'brightness_up',
        'brightness_down',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'LED Infrared via Test IR emitter Received command',
    }),
    'context': <ANY>,
    'entity_id': 'event.led_infrared_via_test_ir_emitter_received_command',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[generic_24_key][event.led_infrared_via_test_ir_emitter_received_command-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'on',
        'off',
        'brightness_up',
        'brightness_down',
        'flash',
        'strobe',
        'fade',
        'smooth',
        'red',
        'green',
        'blue',
        'white',
        'tomato',
        'light_green',
        'sky_blue',
        'orange_red',
        'cyan',
        'rebecca_purple',
        'orange',
        'turquoise',
        'purple',
        'yellow',
        'dark_cyan',
        'plum',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.led_infrared_via_test_ir_emitter_received_command',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Received command',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Received command',
    'platform': 'led_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'received_command',
    'unique_id': '1234567890',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[generic_24_key][event.led_infrared_via_test_ir_emitter_received_command-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'on',
        'off',
        'brightness_up',
        'brightness_down',
        'flash',
        'strobe',
        'fade',
        'smooth',
        'red',
        'green',
        'blue',
        'white',
        'tomato',
        'light_green',
        'sky_blue',
        'orange_red',
        'cyan',
        'rebecca_purple',
        'orange',
        'turquoise',
        'purple',
        'yellow',
        'dark_cyan',
        'plum',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'LED Infrared via Test IR emitter Received command',
    }),
    'context': <ANY>,
    'entity_id': 'event.led_infrared_via_test_ir_emitter_received_command',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[generic_40_key][event.led_infrared_via_test_ir_emitter_received_command-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'on',
        'off',
        'brightness_up',
        'brightness_down',
        'white_brightness_up',
        'white_brightness_down',
        'white_on',
        'white_off',
        'white_brightness_25',
        'white_brightness_50',
        'white_brightness_75',
        'white_brightness_100',
        'quick',
        'slow',
        'jump3',
        'fade3',
        'jump7',
        'fade7',
        'flash',
        'auto',
        'red',
        'green',
        'blue',
        'white',
        'tomato',
        'light_green',
        'deep_blue',
        'floral_white',
        'orange',
        'turquoise',
        'purple',
        'lavender_blush',
        'yellowish',
        'cyan',
        'magenta',
        'ghost_white',
        'yellow',
        'aqua',
        'pink',
        'light_cyan',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.led_infrared_via_test_ir_emitter_received_command',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Received command',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Received command',
    'platform': 'led_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'received_command',
    'unique_id': '1234567890',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[generic_40_key][event.led_infrared_via_test_ir_emitter_received_command-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'on',
        'off',
        'brightness_up',
        'brightness_down',
        'white_brightness_up',
        'white_brightness_down',
        'white_on',
        'white_off',
        'white_brightness_25',
        'white_brightness_50',
        'white_brightness_75',
        'white_brightness_100',
        'quick',
        'slow',
        'jump3',
        'fade3',
        'jump7',
        'fade7',
        'flash',
        'auto',
        'red',
        'green',
        'blue',
        'white',
        'tomato',
        'light_green',
        'deep_blue',
        'floral_white',
        'orange',
        'turquoise',
        'purple',
        'lavender_blush',
        'yellowish',
        'cyan',
        'magenta',
        'ghost_white',
        'yellow',
        'aqua',
        'pink',
        'light_cyan',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'LED Infrared via Test IR emitter Received command',
    }),
    'context': <ANY>,
    'entity_id': 'event.led_infrared_via_test_ir_emitter_received_command',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[generic_44_key][event.led_infrared_via_test_ir_emitter_received_command-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'on',
        'off',
        'brightness_up',
        'brightness_down',
        'red_up',
        'green_up',
        'blue_up',
        'red_down',
        'green_down',
        'blue_down',
        'quick',
        'slow',
        'diy1',
        'diy2',
        'diy3',
        'diy4',
        'diy5',
        'diy6',
        'auto',
        'flash',
        'jump3',
        'jump7',
        'fade3',
        'fade7',
        'red',
        'green',
        'blue',
        'white',
        'tomato',
        'light_green',
        'deep_blue',
        'floral_white',
        'orange',
        'turquoise',
        'purple',
        'lavender_blush',
        'yellowish',
        'cyan',
        'magenta',
        'ghost_white',
        'yellow',
        'aqua',
        'pink',
        'light_cyan',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.led_infrared_via_test_ir_emitter_received_command',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Received command',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Received command',
    'platform': 'led_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'received_command',
    'unique_id': '1234567890',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[generic_44_key][event.led_infrared_via_test_ir_emitter_received_command-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'on',
        'off',
        'brightness_up',
        'brightness_down',
        'red_up',
        'green_up',
        'blue_up',
        'red_down',
        'green_down',
        'blue_down',
        'quick',
        'slow',
        'diy1',
        'diy2',
        'diy3',
        'diy4',
        'diy5',
        'diy6',
        'auto',
        'flash',
        'jump3',
        'jump7',
        'fade3',
        'fade7',
        'red',
        'green',
        'blue',
        'white',
        'tomato',
        'light_green',
        'deep_blue',
        'floral_white',
        'orange',
        'turquoise',
        'purple',
        'lavender_blush',
        'yellowish',
        'cyan',
        'magenta',
        'ghost_white',
        'yellow',
        'aqua',
        'pink',
        'light_cyan',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'LED Infrared via Test IR emitter Received command',
    }),
    'context': <ANY>,
    'entity_id': 'event.led_infrared_via_test_ir_emitter_received_command',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
